<resources>
    <string name="app_name">Moviie</string>

    <!-- Login and register -->
    <string name="login_field">Login: </string>
    <string name="password_field">Password: </string>
    <string name="login_button">Connect</string>
    <string name="register">Register</string>
    <string name="password_confirmation_field">Confirmation: </string>
    <string name="need_an_account">Need an account ?</string>
    <string name="registration_successfull">You\'ve been successfully registred.</string>

    <!-- MyMovies -->
    <string name="my_movies">My movies</string>
    <string name="viewed">Viewed</string>
    <string name="not_viewed">Not viewed</string>

    <!-- Movies -->
    <string name="popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="coming_soon">Coming soon</string>
    <string name="shared">Shared with me</string>

    <!-- Movie Detail -->
    <string name="seen">Seen</string>
    <string name="synopsis">Synopsis</string>
    <string name="release_date">Release date</string>

    <!-- Friends -->
    <string name="my_friends">My friends</string>
    <string name="no_friends">You have no friends yet.</string>

    <!-- Search -->
    <string name="search">Search</string>
    <string name="no_results">No results.</string>
    <string name="no_empty_search">Empty searches are not allowed.</string>

    <!-- Erorrs -->
    <string name="server_error">Unable to contact server.</string>
    <string name="invalid_credentials">Invalid credentials.</string>
    <string name="password_do_not_match">Password do not match confirmation.</string>
    <string name="username_already_exists">This username is taken.</string>
    <string name="unable_logout">Unable to log you out.</string>

    <!-- Miscallenous -->
    <string name="retry">Retry</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="share_with_a_friend">Share with a friend.</string>
    <string name="logout">Logout</string>
    <string name="themoviedb">This product uses TMDb API but is not endorsed or certified by TMDb</string>
    <string name="developer">Created by johnsudaar.</string>
    <string name="loging_out">Loging out.</string>

    <!-- Share messages -->
    <string name="share_not_seen">Want to see a movie? {{MOVIE}} looks awesome !</string>
    <string name="share_seen">You need to see {{MOVIE}} this movie is awesome !</string>
</resources>
