<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default"
    android:background="@drawable/login_bg">
    <ProgressBar
        android:id="@+id/progress"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- Title -->
        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@dimen/text_title_size"/>

        <!-- Login -->
        <EditText
            android:id="@+id/login_field"
            android:layout_marginTop="@dimen/login_separator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title"
            android:layout_toRightOf="@+id/password_label"/>
        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_field"
            android:textColor="@color/white"
            android:layout_alignBaseline="@id/login_field"
            />

        <!-- Password -->
        <EditText
            android:id="@+id/password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_field"
            android:layout_toRightOf="@+id/password_label"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_field"
            android:text="@string/password_field"
            android:textColor="@color/white"
            android:layout_alignBaseline="@id/password_field"
            />

        <!-- Login button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_field"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/login_separator"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <!-- Register button -->

        <TextView
            android:id="@+id/need_an_accunt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_separator"
            android:layout_below="@id/login_button"
            android:text="@string/need_an_account"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/need_an_accunt_title"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/login_separator"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
    </RelativeLayout>

</RelativeLayout>
