<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default"
    android:background="@drawable/login_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <!-- Title -->
        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="@dimen/text_title_size"/>

        <!-- Login -->
        <EditText
            android:id="@+id/login_field"
            android:layout_marginTop="@dimen/login_separator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title"
            android:layout_toEndOf="@+id/confirmation_label"
            android:layout_toRightOf="@+id/confirmation_label" />
        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_field"
            android:textColor="@color/white"
            android:layout_alignBaseline="@id/login_field"
            android:layout_marginEnd="@dimen/margin_field"
            android:layout_marginRight="@dimen/margin_field"
            android:layout_toStartOf="@id/login_field"
            android:layout_toLeftOf="@id/login_field" />

        <!-- Password -->
        <EditText
            android:id="@+id/password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_field"
            android:layout_toEndOf="@+id/confirmation_label"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/confirmation_label" />
        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/password_field"
            android:text="@string/password_field"
            android:textColor="@color/white"
            android:layout_alignBaseline="@id/password_field"
            android:layout_toLeftOf="@id/password_field"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="@dimen/margin_field" />

        <!-- Confirmation -->
        <EditText
            android:id="@+id/confirmation_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_field"
            android:layout_toEndOf="@+id/confirmation_label"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/confirmation_label" />
        <TextView
            android:id="@+id/confirmation_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_field"
            android:text="@string/password_confirmation_field"
            android:textColor="@color/white"
            android:layout_alignBaseline="@id/confirmation_field"
            android:layout_marginRight="@dimen/margin_field" />


        <!-- Login button -->
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmation_field"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/login_separator"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
    </RelativeLayout>

</LinearLayout>
